# imdm

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pytest-unit-tests.yaml
docs/: requirements.txt
docs/source/: conf.py  imdm.data_checks.rst  imdm.data_checks.testing.rst  imdm.data_models.rst  imdm.data_models.testing.rst  imdm.data_tests.rst  imdm.rst  index.rst  install.rst  modules.rst  unit_tests.rst  usage.rst
imdm/data_models/: generic_models.py  image_specific_structures.py
imdm/data_models/testing/: test_mri.py  test_print.py
mridm/data_models/: __init__.py  generic_models.py  mri_specific_structures.py
mridm/data_models/testing/: test_generics.py  test_mri.py
src/data_models/: mri_specific_structures.py
src/imdm/: __init__.py  _authoring.py
src/imdm/data_checks/: __init__.py  checkers.py
src/imdm/data_checks/testing/: test_tests.py
src/imdm/data_models/: __init__.py  generic_models.py  image_specific_structures.py
src/imdm/data_tests/: __init__.py  tests.py
