[tool.poetry]
name = "imdm"
version = "0.1.0"
license = "MIT"
description = "Data models for MRI and image applications"
authors = ["josegcpa <jose.almeida@research.fchampalimaud.org>"]
readme = "README.md"
packages = [{include = "imdm"}]

[tool.poetry.dependencies]
python = "^3.9"
simpleitk = "^2.2.1"
pydicom = "^2.3.1"
pytest = "^7.2.2"
numpy = "^1.24.2"
termcolor = "^2.2.0"
ruff = "^0.0.254"
pillow = "^9.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
homepage = "https://github.com/josegcpa/imdm"  
